gcc/testsuite/g++.dg/cpp1y/auto-fn53.C
// PR c++/86942
// { dg-do compile { target c++14 } }

using T = decltype(auto) () -> int; // { dg-error "invalid use of" }
